# epic-drawing

./: README.md  start.sh
.github/workflows/: ci-backend.yml  ci-frontend.yaml
backend/: .gitignore  Cargo.toml  README.md  images.toml
backend/.github/workflows/: ci.yml
backend/src/: cache.rs  config.rs  contour.rs  fourier.rs  lib.rs  linking.rs  main.rs  morphology.rs  observer.rs  pipeline.rs
frontend/: .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.d.ts  app.html
frontend/src/lib/: backend.ts
frontend/src/lib/components/: EpicycloidCanvas.svelte  ImageSelector.svelte  index.ts
frontend/src/lib/md/: code.md  maths.md
frontend/src/lib/types/: complex.ts  drawing.ts  index.ts  wasm.ts
frontend/src/lib/utils/: epicycloid.ts  index.ts
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
frontend/src/routes/about/code/: +page.svelte
frontend/src/routes/about/maths/: +page.svelte
